fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 body {
-  width: 100vw;
   overflow-x: hidden;
   background-color: white;
   font-family: 'General Sans', sans-serif;
